--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,25 @@
 # my other leader key. same as Spaces in OS X
 set-option -g prefix C-s
 
-# resource
-bind r source ~/.tmux.conf
+set -g status-interval 1
+
+set -g lock-after-time 600
+set -g lock-command "/usr/local/bin/pipes -t 6"
+
+# Use r to quickly reload tmux settings
+unbind r
+bind r \
+	source-file ~/.tmux/tmux.conf \;\
+	display 'Reloaded tmux config'
 
 set -g default-terminal "screen-256color"
+
+# Set the history limit so we get lots of scrollback.
+setw -g history-limit 50000000
+
+# monitor activities in other windows
+setw -g monitor-activity on
+set -g visual-activity on
 
 # airline-like status output
 set-option -g set-titles on
@@ -36,3 +51,41 @@ bind C-j resize-pane -D 5
 bind C-k resize-pane -U 5
 bind C-l resize-pane -R 5
 bind _   resize-pane -Z
+
+set -g @resurrect-save 'A'
+set -g @resurrect-restore 'R'
+
+# copy to system clipboard
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+
+# paste from system clipboard
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+# status bar theme
+
+set -g status 'on'
+set -g status-position top
+set -g status-bg 'colour235'
+set -g status-justify 'centre'
+set -g status-left-length '100'
+set -g status-right-length '100'
+set -g message-style fg='colour222',bg='colour238'
+set -g message-command-style fg='colour222',bg='colour238'
+set -g pane-border-style fg='colour238'
+set -g pane-active-border-style fg='colour154'
+setw -g window-status-activity-style fg='colour154',bg='colour235',none
+setw -g window-status-separator ''
+setw -g window-status-style fg='colour121',bg='colour235',none
+
+set -g status-left '#[fg=colour232,bg=colour154] #S #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #W #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] #(whoami) #(uptime  | cut -d " " -f 1,2,3) #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+set -g status-right '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour121,bg=colour235] %r %a %Y #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #H #[fg=colour154,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour232,bg=colour154]#{cpu_bg_color} CPU: #{cpu_icon} #{cpu_percentage} #{ram_bg_color} Mem: #{ram_icon} #{ram_percentage} '
+setw -g window-status-format '#[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]#[default] #I #W #[fg=colour235,bg=colour235,nobold,nounderscore,noitalics]'
+setw -g window-status-current-format '#[fg=colour235,bg=colour238,nobold,nounderscore,noitalics]#[fg=colour222,bg=colour238] #I #W #F #[fg=colour238,bg=colour235,nobold,nounderscore,noitalics]'
+
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+
+set-option -g @plugin 'b0o/tmux-autoreload'
+
+run '~/.tmux/plugins/tpm/tpm'
